# deep-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml
deep_research_agent/agents/: __init__.py  critic.py  planner.py  researcher.py  synthesis.py  writer.py
deep_research_agent/app/: api.py  cli.py  ui.py
deep_research_agent/core/: __init__.py  config.py  graph.py  router.py  state.py
deep_research_agent/memory/: __init__.py  vector_store.py
deep_research_agent/tools/: __init__.py  scraper.py  search.py  storage.py
docs/: AGENT.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  EVALUATION_REPORT.md  MULTI_AGENT_VALUE.md  PROGRESS.md  QUALITY_ISSUES.md  VERIFICATION_REPORT.md
docs/user/: README.md  架构详解.md
examples/: basic_research.py  batch_research.py
src/: __init__.py
src/agents/: critic.py  planner.py  researcher.py  synthesis.py  writer.py
src/app/: api.py  cli.py  ui.py
src/core/: config.py  graph.py  router.py
src/memory/: vector_store.py
src/tools/: search.py  storage.py
tests/: __init__.py  test_router.py  test_state.py
