[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Multi-agent deep research system with batch automation, observability, and knowledge沉淀"
authors = [{ name = "Jerry X", email = "jerryx@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # LLM providers
    "openai>=1.50.0",
    "anthropic>=0.39.0",

    # Search & web
    "duckduckgo-search>=6.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",

    # Vector storage
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # API & UI
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",

    # Observability
    "langsmith>=0.1.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiohttp>=3.11.0",
    "tenacity>=9.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
deep-research = "deep_research_agent.app.cli:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
